--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <div>
             <div>
-                <span>PINK</span>
-                <img src="" alt="Открыть меню">
+                <a href="/">PINK</a>
+                <a href="#">Меню</a>
             </div>
             <nav>
                 <ul>
@@ -33,13 +33,13 @@
     </header>
     <main>
         <section>
-            <div>Взгляние на жизнь иначе!</div>
+            <div>Взгляните на жизнь иначе!</div>
             <img src="http://placehold.it/320x313" alt="Мобильник">
         </section>
 
 
         <section>
-            <div>Скачать приложение</div>
+            <a href="#">Скачать приложение</a>
             <div>
                 <a href="#" title="apple">apple</a>
                 <a href="#" title="android">android</a>
