--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <main>
         <section class="promo">
-            <div class="promo_slogan">Взгляните на жизнь иначе!</div>
-            <img class="promo_img" src="http://placehold.it/320x313" alt="Мобильник">
+            <div class="promo__slogan">Взгляните на жизнь иначе!</div>
+            <img class="promo__img" src="http://placehold.it/320x313" alt="Мобильник">
         </section>
 
 
