--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <section class="application">
             <a class="application__button" href="#">Скачать приложение</a>
             <div class="application__platform_selector">
-                <a class="application__apple_link" href="#" title="apple">apple</a>
-                <a class="application__android_link" href="#" title="android">android</a>
-                <a class="application__win_link" href="#" title="windows phone">windows phone</a>
+                <a class="application__link application__link--apple" href="#" title="apple">apple</a>
+                <a class="application__link application__link--android" href="#" title="android">android</a>
+                <a class="application__link application__link--win" href="#" title="windows phone">windows phone</a>
             </div>
             <div class="application__desc">Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</div>
         </section>
@@ -51,17 +51,17 @@
                 Устали от серости мегаполиса?
                 <br>Нам есть, что вам предложить!
             </div>
-            <div class="features__feature">
-                <p class="features__title">Поднимает настроение</p>
-                <span class="features__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несоклько кликов!</span>
+            <div class="feature">
+                <p class="feature__title">Поднимает настроение</p>
+                <span class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несоклько кликов!</span>
             </div>
-            <div class="features__feauture">
-                <p class="features__title">Меняет мир вокруг</p>
-                <span class="features__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</span>
+            <div class="feauture">
+                <p class="feature__title">Меняет мир вокруг</p>
+                <span class="feature__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</span>
             </div>
-            <div class="features__feature">
-                <p class="features__title">Заводит новых друзей</p>
-                <span class="features__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</span>
+            <div class="feature">
+                <p class="feature__title">Заводит новых друзей</p>
+                <span class="feature__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</span>
             </div>
             <img class="features__promo_img" src="" alt="Приложение">
         </section>
@@ -69,12 +69,12 @@
         <section class="reviews">
             <article class="review">
                 <p class="review__name">Николай Петров</p>
-                <span class="review_text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я 
+                <span class="review__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я 
                 познакомился со своей будущей женой в комментариях к выложенной фотографии!"</span>
             </article>
             <ul class="slider_switch">
                 <li class="slider_switch__item">
-                    <a class="slider_switch__button slider_switch--active" href=""></a>
+                    <a class="slider_switch__button slider_switch__button--active" href=""></a>
                 </li>
                 <li class="slider_switch__item">
                     <a class="slider_switch__button" href=""></a>
@@ -86,7 +86,7 @@
         </section>
 
         <section class="price_slider">
-            <div class="price_slider__frame">
+            <div class="price_slider_frame">
                 <div class="price_slider__header">
                     <img class="price_slider__hit_img" src="http://placehold.it/74x74" alt="">
                     <span class="price_slider__name">Стандарт</span>
@@ -103,7 +103,7 @@
                     <a class="slider_switch__button" href=""></a>
                 </li>
                 <li class="slider_switch__item">
-                    <a class="slider_switch__button slider_switch--active" href=""></a>
+                    <a class="slider_switch__button slider_switch__button--active" href=""></a>
                 </li>
                 <li class="slider_switch__item">
                     <a class="slider_switch__button" href=""></a>
@@ -114,17 +114,17 @@
         <section class="contacts">
             <div class="contacts__slogan">Остались вопросы?
                 <br>Свяжитесь с нами!</div>
-            <div class="contacts__contact">
-                <p class="contacts__title">Звоните:</p>
-                <span class="contacts__addr">8 (800) 1000 900</span>
+            <div class="contact">
+                <p class="contact__title">Звоните:</p>
+                <span class="contact__addr">8 (800) 1000 900</span>
             </div>
-            <div class="contacts__contact">
-                <p class="contacts__title">Пишите:</p>
-                <span class="contacts__addr">hello@pinkapp.ru</span>
+            <div class="contact">
+                <p class="contact__title">Пишите:</p>
+                <span class="contact__addr">hello@pinkapp.ru</span>
             </div>
-            <div class="contacts__contact">
-                <p class="contacts__title">Приезжайте в гости:</p>
-                <span class="contacts__addr">Санкт-Петербург, Невский проспект, д.20</span>
+            <div class="contact">
+                <p class="contact__title">Приезжайте в гости:</p>
+                <span class="contact__addr">Санкт-Петербург, Невский проспект, д.20</span>
             </div>
             <img class="contacts__map" src="http://placehold.it/320x250" alt="">
         </section>
