--- a/index.html
+++ b/index.html
@@ -66,27 +66,30 @@
             <img class="features__promo_img" src="" alt="Приложение">
         </section>
 
-        <section class="reviews">
-            <article class="review">
-                <p class="review__name">Николай Петров</p>
-                <span class="review__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я 
-                познакомился со своей будущей женой в комментариях к выложенной фотографии!"</span>
-            </article>
-            <ul class="slider_switch">
-                <li class="slider_switch__item">
-                    <a class="slider_switch__button slider_switch__button--active" href=""></a>
+        <section class="slider_frame">
+            <div class="slider_frame__body">
+                <article class="review">
+                    <p class="review__name">Николай Петров</p>
+                    <span class="review__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я 
+                    познакомился со своей будущей женой в комментариях к выложенной фотографии!"</span>
+                </article>
+            </div>
+            <ul class="slider_frame__switch">
+                <li class="slider_frame__switch_item">
+                    <a class="slider_frame__switch_button slider_frame__switch_button--active" href=""></a>
                 </li>
-                <li class="slider_switch__item">
-                    <a class="slider_switch__button" href=""></a>
+                <li class="slider_frame__switch_item">
+                    <a class="slider_frame__switch_button" href=""></a>
                 </li>
-                <li class="slider_switch__item">
-                    <a class="slider_switch__button" href=""></a>
+                <li class="slider_frame__switch_item">
+                    <a class="slider_frame__switch_button" href=""></a>
                 </li>
             </ul>
         </section>
 
-        <section class="price_slider">
-            <div class="price_slider_frame">
+        <section class="slider_frame">
+            <div class="slider_frame__body">
+            <div class="price_slider">
                 <div class="price_slider__header">
                     <img class="price_slider__hit_img" src="http://placehold.it/74x74" alt="">
                     <span class="price_slider__name">Стандарт</span>
@@ -98,15 +101,16 @@
                     <li class="price_slider__feature--off">Комментарии</li>
                 </ul>
             </div>
-            <ul class="slider_switch">
-                <li class="slider_switch__item">
-                    <a class="slider_switch__button" href=""></a>
+            </div>
+            <ul class="slider_frame__switch">
+                <li class="slider_frame__switch_item">
+                    <a class="slider_frame__switch_button slider_frame__switch_button--active" href=""></a>
                 </li>
-                <li class="slider_switch__item">
-                    <a class="slider_switch__button slider_switch__button--active" href=""></a>
+                <li class="slider_frame__switch_item">
+                    <a class="slider_frame__switch_button" href=""></a>
                 </li>
-                <li class="slider_switch__item">
-                    <a class="slider_switch__button" href=""></a>
+                <li class="slider_frame__switch_item">
+                    <a class="slider_frame__switch_button" href=""></a>
                 </li>
             </ul>
         </section>
