--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
 
         <section class="slider_frame">
             <div class="slider_frame__body">
-            <div class="price_slider">
-                <div class="price_slider__header">
-                    <img class="price_slider__hit_img" src="http://placehold.it/74x74" alt="">
-                    <span class="price_slider__name">Стандарт</span>
-                    <span class="price_slider__price">3,99 USD</span>
+            <div class="price">
+                <div class="price__header">
+                    <img class="price__hit_img" src="http://placehold.it/74x74" alt="">
+                    <span class="price__name">Стандарт</span>
+                    <span class="price__cost">3,99 USD</span>
                 </div>
-                <ul class="price_slider__features">
-                    <li class="price_slider__feature">Розовый фильтр</li>
-                    <li class="price_slider__feature">Смайлики</li>
-                    <li class="price_slider__feature--off">Комментарии</li>
+                <ul class="price__features">
+                    <li class="price__feature">Розовый фильтр</li>
+                    <li class="price__feature">Смайлики</li>
+                    <li class="price__feature--off">Комментарии</li>
                 </ul>
             </div>
             </div>
