--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
+    <link rel="stylesheet" href="/css/main.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
     <header class="main_page_header">
         <div class="main_page_header__menu_container">
-            <a class="main_page_header__logo" href="/">PINK</a>
-            <a class="main_page_header__main_menu_button" href="#">Меню</a>
+            <a class="main_page_header__logo" href="/"></a>
+            <a class="main_page_header__main_menu_button" href="#"></a>
+            <a class="main_page_header__main_menu_button--close" href="#" style="display:none"></a>
         </div>
-        <nav class="main_menu">
+        <nav class="main_menu" style="display:none">
             <li class="main_menu__item">
                 <a class="main_menu__link" href="#">Информация</a>
             </li>
@@ -26,21 +29,17 @@
                 <a class="main_menu__link" href="#">Стоимость</a>
             </li>
         </nav>
+        <div class="main_page_header__slogan">Взгляните на жизнь иначе!</div>
     </header>
 
     <main>
-        <section class="promo">
-            <div class="promo__slogan">Взгляните на жизнь иначе!</div>
-            <img class="promo__img" src="http://placehold.it/320x313" alt="Мобильник">
-        </section>
-
 
         <section class="application">
             <a class="application__button" href="#">Скачать приложение</a>
             <div class="application__platform_selector">
-                <a class="application__link application__link--apple" href="#" title="apple">apple</a>
-                <a class="application__link application__link--android" href="#" title="android">android</a>
-                <a class="application__link application__link--win" href="#" title="windows phone">windows phone</a>
+                <a class="application__link application__link--apple" href="#" title="apple"></a>
+                <a class="application__link application__link--android" href="#" title="android"></a>
+                <a class="application__link application__link--win" href="#" title="windows phone"></a>
             </div>
             <div class="application__desc">Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</div>
         </section>
@@ -49,29 +48,31 @@
         <section class="features">
             <div class="features__slogan">
                 Устали от серости мегаполиса?
+                <br>
                 <br>Нам есть, что вам предложить!
             </div>
             <div class="feature">
                 <p class="feature__title">Поднимает настроение</p>
-                <span class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несоклько кликов!</span>
+                <div class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несоклько кликов!</div>
             </div>
-            <div class="feauture">
+            <div class="feature">
                 <p class="feature__title">Меняет мир вокруг</p>
-                <span class="feature__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</span>
+                <div class="feature__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</div>
             </div>
             <div class="feature">
                 <p class="feature__title">Заводит новых друзей</p>
-                <span class="feature__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</span>
+                <div class="feature__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</div>
             </div>
-            <img class="features__promo_img" src="" alt="Приложение">
+            <div class="features__promo_container">
+                <img class="features__promo_img" src="/img/iphone_screen.png" alt="Приложение">
+            </div>
         </section>
 
         <section class="slider_frame">
             <div class="slider_frame__body">
                 <article class="review">
                     <p class="review__name">Николай Петров</p>
-                    <span class="review__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я 
-                    познакомился со своей будущей женой в комментариях к выложенной фотографии!"</span>
+                    <div class="review__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</div>
                 </article>
             </div>
             <ul class="slider_frame__switch">
@@ -89,25 +90,25 @@
 
         <section class="slider_frame">
             <div class="slider_frame__body">
-            <div class="price">
-                <div class="price__header">
-                    <img class="price__hit_img" src="http://placehold.it/74x74" alt="">
-                    <span class="price__name">Стандарт</span>
-                    <span class="price__cost">3,99 USD</span>
+                <div class="price">
+                    <div class="price__header">
+<!--                      <img class="price__hit_img" src="http://placehold.it/74x74" alt="">-->
+                        <span class="price__name">Стандарт</span>
+                        <span class="price__cost">3,99 USD</span>
+                    </div>
+                    <ul class="price__features">
+                        <li class="price__feature">Розовый фильтр</li>
+                        <li class="price__feature">Смайлики</li>
+                        <li class="price__feature--off">Комментарии</li>
+                    </ul>
                 </div>
-                <ul class="price__features">
-                    <li class="price__feature">Розовый фильтр</li>
-                    <li class="price__feature">Смайлики</li>
-                    <li class="price__feature--off">Комментарии</li>
-                </ul>
-            </div>
             </div>
             <ul class="slider_frame__switch">
                 <li class="slider_frame__switch_item">
-                    <a class="slider_frame__switch_button slider_frame__switch_button--active" href=""></a>
+                    <a class="slider_frame__switch_button" href=""></a>
                 </li>
                 <li class="slider_frame__switch_item">
-                    <a class="slider_frame__switch_button" href=""></a>
+                    <a class="slider_frame__switch_button slider_frame__switch_button--active" href=""></a>
                 </li>
                 <li class="slider_frame__switch_item">
                     <a class="slider_frame__switch_button" href=""></a>
