--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <section class="application">
             <a class="application__button" href="#">Скачать приложение</a>
             <div class="application__platform_selector">
-                <a class="application__link application__link--apple" href="#" title="apple"></a>
-                <a class="application__link application__link--android" href="#" title="android"></a>
-                <a class="application__link application__link--win" href="#" title="windows phone"></a>
+                <a class="application__link application__link--apple" href="#" title="apple">Apple</a>
+                <a class="application__link application__link--android" href="#" title="android">Android</a>
+                <a class="application__link application__link--win" href="#" title="windows phone">WP</a>
             </div>
             <div class="application__desc">Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</div>
         </section>
@@ -92,7 +92,7 @@
             <div class="slider_frame__body">
                 <div class="price">
                     <div class="price__header">
-<!--                      <img class="price__hit_img" src="http://placehold.it/74x74" alt="">-->
+                        <!--                      <img class="price__hit_img" src="http://placehold.it/74x74" alt="">-->
                         <span class="price__name">Стандарт</span>
                         <span class="price__cost">3,99 USD</span>
                     </div>
