Приблизительно закончен css мобильной версии.
Слайдер будет дорабатываться и карта тоже.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </li>
         </nav>
         <div class="main_page_header__slogan">Взгляните на жизнь иначе!</div>
+        <img src="/img/iphone-hand-1.png" alt="Промо изображение" class="main_page_header__promo">
     </header>
 
     <main>
@@ -41,7 +42,7 @@
                 <a class="application__link application__link--android" href="#" title="android">Android</a>
                 <a class="application__link application__link--win" href="#" title="windows phone">WP</a>
             </div>
-            <div class="application__desc">Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</div>
+            <div class="application__desc">Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</div>            
         </section>
 
 
@@ -51,6 +52,7 @@
                 <br>
                 <br>Нам есть, что вам предложить!
             </div>
+            <div class="gradient"></div>
             <div class="feature">
                 <p class="feature__title">Поднимает настроение</p>
                 <div class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несоклько кликов!</div>
@@ -91,6 +93,7 @@
         <section class="slider_frame">
             <div class="slider_frame__body">
                 <div class="price">
+<!--                   <div class="gradient"></div>-->
                     <div class="price__header">
                         <!--                      <img class="price__hit_img" src="http://placehold.it/74x74" alt="">-->
                         <span class="price__name">Стандарт</span>
@@ -121,17 +124,17 @@
                 <br>Свяжитесь с нами!</div>
             <div class="contact">
                 <p class="contact__title">Звоните:</p>
-                <span class="contact__addr">8 (800) 1000 900</span>
+                <div class="contact__addr">8 (800) 1000 900</div>
             </div>
             <div class="contact">
                 <p class="contact__title">Пишите:</p>
-                <span class="contact__addr">hello@pinkapp.ru</span>
+                <div class="contact__addr">hello@pinkapp.ru</div>
             </div>
             <div class="contact">
                 <p class="contact__title">Приезжайте в гости:</p>
-                <span class="contact__addr">Санкт-Петербург, Невский проспект, д.20</span>
+                <div class="contact__addr">Санкт-Петербург, Невский проспект, д.20</div>
             </div>
-            <img class="contacts__map" src="http://placehold.it/320x250" alt="">
+            <img class="contacts__map">
         </section>
     </main>
     <footer></footer>
