--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="main_page_header__menu_container">
             <a class="main_page_header__logo" href="/"></a>
             <a class="main_page_header__main_menu_button" href="#"></a>
-            <a class="main_page_header__main_menu_button--close" href="#" style="display:none"></a>
+            <a class="main_page_header__main_menu_button--close main_page_header__main_menu_button--hidden" href="#"></a>
         </div>
-        <nav class="main_menu" style="display:none">
+        <nav class="main_menu main_menu--hidden">
             <li class="main_menu__item">
                 <a class="main_menu__link" href="#">Информация</a>
             </li>
@@ -30,7 +30,6 @@
             </li>
         </nav>
         <div class="main_page_header__slogan">Взгляните на жизнь иначе!</div>
-        <img src="/img/iphone-hand-1.png" alt="Промо изображение" class="main_page_header__promo">
     </header>
 
     <main>
