--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <br>
                 <br>Нам есть, что вам предложить!
             </div>
-            <div class="gradient"></div>
-            <div class="feature">
+            
+            <div class="feature gradient">
                 <p class="feature__title">Поднимает настроение</p>
                 <div class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несоклько кликов!</div>
             </div>
