Изменена структура html

--- a/index.html
+++ b/index.html
@@ -30,19 +30,21 @@
                 <a class="main_menu__link" href="#">Стоимость</a>
             </li>
         </nav>
-        <div class="main_page_header__slogan">Взгляните на жизнь иначе!</div>
+
     </header>
 
     <main>
-
         <section class="application">
-            <a class="application__button" href="#">Скачать приложение</a>
-            <div class="application__platform_selector">
-                <a class="application__link application__link--apple" href="#" title="apple">Apple</a>
-                <a class="application__link application__link--android" href="#" title="android">Android</a>
-                <a class="application__link application__link--win" href="#" title="windows phone">WP</a>
+            <div class="application__slogan">Взгляните на жизнь иначе!</div>
+            <div class="application__download_block">
+                <a class="application__button" href="#">Скачать приложение</a>
+                <div class="application__platform_selector">
+                    <a class="application__link application__link--apple" href="#" title="apple">Apple</a>
+                    <a class="application__link application__link--android" href="#" title="android">Android</a>
+                    <a class="application__link application__link--win" href="#" title="windows phone">WP</a>
+                </div>
+                <div class="application__desc">Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</div>
             </div>
-            <div class="application__desc">Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</div>            
         </section>
 
 
@@ -93,7 +95,7 @@
         <section class="slider_frame">
             <div class="slider_frame__body">
                 <div class="price">
-<!--                   <div class="gradient"></div>-->
+                    <!--                   <div class="gradient"></div>-->
                     <div class="price__header">
                         <!--                      <img class="price__hit_img" src="http://placehold.it/74x74" alt="">-->
                         <span class="price__name">Стандарт</span>
