--- a/index.html
+++ b/index.html
@@ -51,23 +51,36 @@
         <section class="features">
             <div class="features__slogan">
                 Устали от серости мегаполиса?
-                <br>
-                <br>Нам есть, что вам предложить!
             </div>
-            <div class="feature gradient">
-                <p class="feature__title">Поднимает настроение</p>
-                <div class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несоклько кликов!</div>
+            <div class="features__slogan gradient features__slogan--short">Нам есть, что вам предложить!</div>
+            <div class="features__block">
+                <div class="feature">
+                    <p class="feature__title">Поднимает настроение</p>
+                    <div class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</div>
+                </div>
+                <div class="feature">
+                    <p class="feature__title">Меняет мир вокруг</p>
+                    <div class="feature__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</div>
+                </div>
+                <div class="feature">
+                    <p class="feature__title">Заводит новых друзей</p>
+                    <div class="feature__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</div>
+                </div>
             </div>
-            <div class="feature">
-                <p class="feature__title">Меняет мир вокруг</p>
-                <div class="feature__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</div>
-            </div>
-            <div class="feature">
-                <p class="feature__title">Заводит новых друзей</p>
-                <div class="feature__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</div>
-            </div>
-            <div class="features__promo_container">
-                <img class="features__promo_img" src="/img/iphone_screen.png" alt="Приложение">
+                <picture>
+                    <source media="(min-width: 700px)" 
+                    srcset="/img/iphone-screen-2-3@1x.png 1x,
+                /img/iphone-screen-2-3@2x.png 2x">
+                        <img class="features__promo_img" src="/img/iphone-screen-3-3@1x.png" alt="Приложение" srcset="/img/iphone-screen-3-3@2x.png 2x">
+                </picture>
+        </section>
+        
+        <section class="ads">
+            <img src="/img/timer-2.svg" alt="" class="ads__time_img">
+            <div class="ads__article">
+                <div class="ads__title">Эффект на 24 часа!</div>
+                <div class="ads__text">Британские ученые провели исследования и доказали, что положительный эффект от приложения длится целые сутки!</div>
+                <a href="#" class="ads__link">Узнать больше об исследовании</a>
             </div>
         </section>
 
