tablet version base

--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
                 </picture>
         </section>
         
-        <section class="ads">
-            <img src="/img/timer-2.svg" alt="" class="ads__time_img">
+        <section class="ads clearfix">
+            <img src="/img/timer.svg" alt="" class="ads__time_img">
             <div class="ads__article">
                 <div class="ads__title">Эффект на 24 часа!</div>
-                <div class="ads__text">Британские ученые провели исследования и доказали, что положительный эффект от приложения длится целые сутки!</div>
+                <div class="ads__text">Британские ученые провели исследования и доказали, что положительный эффект от приложения длится целые сутки!
+                
+                </div>
                 <a href="#" class="ads__link">Узнать больше об исследовании</a>
             </div>
         </section>
@@ -88,6 +90,7 @@
             <div class="slider_frame__body">
                 <article class="review">
                     <p class="review__name">Николай Петров</p>
+                    <p class="review__profession">25 лет, водитель трамвая</p>
                     <div class="review__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</div>
                 </article>
             </div>
@@ -107,9 +110,7 @@
         <section class="slider_frame">
             <div class="slider_frame__body">
                 <div class="price">
-                    <!--                   <div class="gradient"></div>-->
                     <div class="price__header">
-                        <!--                      <img class="price__hit_img" src="http://placehold.it/74x74" alt="">-->
                         <span class="price__name">Стандарт</span>
                         <span class="price__cost">3,99 USD</span>
                     </div>
@@ -120,7 +121,7 @@
                     </ul>
                 </div>
             </div>
-            <ul class="slider_frame__switch">
+            <ul class="slider_frame__switch slider_frame__switch--price">
                 <li class="slider_frame__switch_item">
                     <a class="slider_frame__switch_button" href=""></a>
                 </li>
@@ -134,7 +135,8 @@
         </section>
 
         <section class="contacts">
-            <div class="contacts__slogan">Остались вопросы?
+            <div class="contacts__slogan">
+               Остались вопросы?
                 <br>Свяжитесь с нами!</div>
             <div class="contact">
                 <p class="contact__title">Звоните:</p>
@@ -148,10 +150,24 @@
                 <p class="contact__title">Приезжайте в гости:</p>
                 <div class="contact__addr">Санкт-Петербург, Невский проспект, д.20</div>
             </div>
-            <img class="contacts__map">
+            <img src="img/map.png" class="contacts__map">
         </section>
     </main>
-    <footer></footer>
+    <footer class="main_page_footer">
+        <a href="#" class="main_page_footer__logo">
+        <img src="/img/Pink-logo-footer-2@1x.png" alt="123">
+        </a>
+        <a href="" class="main_page_footer__twitter">
+        <img src="/img/twitter.svg" alt="123">
+        </a>
+        <a href="" class="main_page_footer__facebook">
+        <img src="/img/facebook.svg" alt="123">    
+        </a>
+        <a href="" class="main_page_footer__youtube">
+            <img src="/img/youtube.svg" alt="123">
+        </a>
+        <a href="" class="main_page_footer__123"></a>   
+    </footer>
 </body>
 
 </html>
