--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="features__slogan">
                 Устали от серости мегаполиса?
             </div>
-            <div class="features__slogan gradient features__slogan--short">Нам есть, что вам предложить!</div>
+            <div class="features__slogan gradient features__slogan--short">Нам есть, что вам<br> предложить!</div>
             <div class="features__block">
                 <div class="feature">
                     <p class="feature__title">Поднимает настроение</p>
