--- a/index.html
+++ b/index.html
@@ -53,42 +53,56 @@
 
 
         <section class="features">
-                <div class="features__slogan">
-                    Устали от серости мегаполиса?
-                </div>
-                <div class="features__slogan gradient features__slogan--short">Нам есть, что вам
-                    <br>предложить!</div>
-                <div class="features__demo">
-                    <div class="layout_center_wrapper">
-                    <div class="features__block">
-                        <div class="feature">
-                            <p class="feature__title">Поднимает настроение</p>
-                            <div class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</div>
+            <div class="features__slogan">
+                Устали от серости мегаполиса?
+            </div>
+            <div class="features__slogan gradient features__slogan--short">Нам есть, что вам
+                <br>предложить!</div>
+            <div class="features__demo">
+                <div class="layout_center_wrapper">
+                    <div class="features__wrapper">
+                        <div class="features__block">
+                            <div class="feature">
+                                <p class="feature__title">Поднимает настроение</p>
+                                <div class="feature__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</div>
+                            </div>
+                            <div class="feature">
+                                <p class="feature__title">Меняет мир вокруг</p>
+                                <div class="feature__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</div>
+                            </div>
+                            <div class="feature">
+                                <p class="feature__title">Заводит новых друзей</p>
+                                <div class="feature__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</div>
+                            </div>
                         </div>
-                        <div class="feature">
-                            <p class="feature__title">Меняет мир вокруг</p>
-                            <div class="feature__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</div>
-                        </div>
-                        <div class="feature">
-                            <p class="feature__title">Заводит новых друзей</p>
-                            <div class="feature__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</div>
-                        </div>
-                    </div>
-                    <picture>
-                        <source media="(min-width: 700px)" srcset="/img/iphone-screen-2-3@1x.png 1x,
+                        <div class="features__pictures_block">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="/img/iphone-screen-2-1@1x.png 1x,
+                /img/iphone-screen-2-1@2x.png 2x">
+                                    <img class="features__promo_img--additional" src="/img/iphone-screen-3-1@1x.png" alt="Приложение">
+                            </picture>
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="/img/iphone-screen-2-2@1x.png 1x,
+                /img/iphone-screen-2-2@2x.png 2x">
+                                    <img class="features__promo_img--additional" src="/img/iphone-screen-3-2@1x.png" alt="Приложение">
+                            </picture>
+                            <picture>
+                                <source media="(min-width: 700px)" srcset="/img/iphone-screen-2-3@1x.png 1x,
                 /img/iphone-screen-2-3@2x.png 2x">
-                            <img class="features__promo_img" src="/img/iphone-screen-3-3@1x.png" alt="Приложение" srcset="/img/iphone-screen-3-3@2x.png 2x">
-                    </picture>
+                                    <img class="features__promo_img" src="/img/iphone-screen-3-3@1x.png" alt="Приложение">
+                            </picture>
+                        </div>
                     </div>
                 </div>
+            </div>
         </section>
         <div class="layout_center_wrapper">
             <section class="ads clearfix">
-                <img src="/img/timer.svg" alt="" class="ads__time_img">
+                <div class="ads__timer"><span class="ads__timer_num">24</span>
+                </div>
                 <div class="ads__article">
                     <div class="ads__title">Эффект на 24 часа!</div>
                     <div class="ads__text">Британские ученые провели исследования и доказали, что положительный эффект от приложения длится целые сутки!
-
                     </div>
                     <a href="#" class="ads__link">Узнать больше об исследовании</a>
                 </div>
