--- a/index.html
+++ b/index.html
@@ -98,26 +98,32 @@
                 </div>
             </div>
         </section>
-        <div class="layout_center_wrapper">
-            <section class="ads clearfix">
-                <div class="ads__timer"><span class="ads__timer_num">24</span>
-                </div>
-                <div class="ads__article">
-                    <div class="ads__title">Эффект на 24 часа!</div>
-                    <div class="ads__text">Британские ученые провели исследования и доказали, что положительный эффект от приложения длится целые сутки!
+        <section class="ads clearfix">
+            <div class="layout_center_wrapper">
+                <div class="ads__wrap">
+                    <div class="ads__timer"><span class="ads__timer_num">24</span>
                     </div>
-                    <a href="#" class="ads__link">Узнать больше об исследовании</a>
+                    <div class="ads__article">
+                        <div class="ads__title">Эффект на 24 часа!</div>
+                        <div class="ads__text">Британские ученые провели исследования и доказали, что положительный эффект от приложения длится целые сутки!
+                        </div>
+                        <a href="#" class="ads__link">Узнать больше об исследовании</a>
+                    </div>
                 </div>
-            </section>
+            </div>
+        </section>
+        <div class="layout_center_wrapper">
             <section class="slider_frame">
                 <div class="slider_frame__body">
+                   <a href="" class="slider_frame__arrow slider_frame__arrow--left">Влево</a>
                     <article class="review">
                         <p class="review__name">Николай Петров</p>
                         <p class="review__profession">25 лет, водитель трамвая</p>
                         <div class="review__text">"Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!"</div>
                     </article>
+                    <a href="" class="slider_frame__arrow slider_frame__arrow--right">Вправо</a>
                 </div>
-                <ul class="slider_frame__switch">
+                <ul class="slider_frame__switch slider_frame__switch--review">
                     <li class="slider_frame__switch_item">
                         <a class="slider_frame__switch_button slider_frame__switch_button--active" href=""></a>
                     </li>
