--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             <section class="slider_frame">
                 <div class="slider_frame__body">
                     <div class="price">
+<!--
                         <div class="price__header">
                             <span class="price__name">Стандарт</span>
                             <span class="price__cost">3,99 USD</span>
@@ -148,6 +149,34 @@
                             <li class="price__feature">Смайлики</li>
                             <li class="price__feature--off">Комментарии</li>
                         </ul>
+                        
+-->
+                   <table class="price__table">
+                       <tr>
+                           <th></th>
+                           <th>База <span class="price__cost">1,99 USD</span></th>
+                           <th>Стандарт <span class="price__cost">3,99 USD</span></th>
+                           <th>Анлим <span class="price__cost">9,99 USD</span></th>
+                       </tr>
+                       <tr>
+                           <td>Розовый фильтр </td>
+                           <td>Розовый фильтр <span class="price--yes"></span></td>
+                           <td>Розовый фильтр <span class="price--no"></span></td>
+                           <td>Розовый фильтр <span class="price--no"></span></td>
+                       </tr>
+                       <tr>
+                           <td>Смайлики</td>
+                           <td>Смайлики <span class="price--yes"></span></td>
+                           <td>Смайлики <span class="price--yes"></span></td>
+                           <td>Смайлики <span class="price--no"></span></td>
+                       </tr>
+                       <tr>
+                           <td>Комментарии</td>
+                           <td>Комментарии <span class="price--yes"></span></td>
+                           <td>Комментарии <span class="price--yes"></span></td>
+                           <td>Комментарии <span class="price--yes"></span></td>
+                       </tr>
+                   </table>
                     </div>
                 </div>
                 <ul class="slider_frame__switch slider_frame__switch--price">
