--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 </div>
                 <div class="contact">
                     <p class="contact__title">Пишите:</p>
-                    <div class="contact__addr">hello@pinkapp.ru</div>
+                    <a href="mailto:hello@pinkapp.ru" class="contact__addr contact__addr--email">hello@pinkapp.ru</a>
                 </div>
                 <div class="contact">
                     <p class="contact__title">Приезжайте в гости:</p>
@@ -243,9 +243,9 @@
             </div>
             <div class="main_page_footer__copyright_block">
                 Website by 
-                <a href="" class="main_page_footer__design_icon"></a>
+                <a href="" class="main_page_footer__copyicon main_page_footer__copyicon--design"></a>
                 for
-                <a href="" class="main_page_footer__ha_icon"></a>
+                <a href="" class="main_page_footer__copyicon main_page_footer__copyicon--ha"></a>
             </div>
         </footer>
     </div>
