--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 <body>
     <header class="main_page_header">
         <div class="layout_center_wrapper">
-            <div class="main_page_header__menu_container">
+            <div id="header" class="main_page_header__menu_container">
                 <a class="main_page_header__logo" href="/"></a>
-                <a class="main_page_header__main_menu_button" href="#"></a>
-                <a class="main_page_header__main_menu_button--close main_page_header__main_menu_button--hidden" href="#"></a>
+                <a id="open_link" class="main_page_header__main_menu_button" href="#"></a>
+                <a id="close_link" class="
+                main_page_header__main_menu_button
+                main_page_header__main_menu_button--close
+                main_page_header__main_menu_button--hidden                    
+                " href="#"></a>
             </div>
-            <nav class="main_menu main_menu--hidden">
+            <nav id="menu" class="main_menu main_menu--hidden">
                 <li class="main_menu__item">
                     <a class="main_menu__link" href="#">Информация</a>
                 </li>
@@ -249,6 +253,7 @@
             </div>
         </footer>
     </div>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
