--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </ul>
             </section>
         </div>
-        <section class="slider_frame">
+        <section class="slider_frame slider_frame--additional_padding gradient--before">
             <div class="slider_frame__body">
                 <div class="price">
                     <div class="layout_center_wrapper">
