--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Главная страница</title>
     <meta name="viewport" content="width=device-width">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main.min.css">
     <script src="js/picturefill.min.js"></script>
 </head>
 
