--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Главная страница</title>
     <meta name="viewport" content="width=device-width">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <script src="js/picturefill.min.js"></script>
 </head>
 
@@ -82,21 +82,21 @@
                         </div>
                         <div class="features__pictures_block">
                             <picture>
-                                <source media="(min-width: 1200px)" srcset="/img/iphone-screen-3-1@1x.png 1x,
-                /img/iphone-screen-3-1@2x.png 2x">
-                                    <img class="features__promo_img--additional" src="/img/iphone-screen-3-1@1x.png" alt="Приложение">
+                                <source media="(min-width: 1200px)" srcset="img/iphone-screen-3-1@1x.png 1x,
+                img/iphone-screen-3-1@2x.png 2x">
+                                    <img class="features__promo_img--additional" src="img/iphone-screen-3-1@1x.png" alt="Приложение">
                             </picture>
                             <picture>
-                                <source media="(min-width: 1200px)" srcset="/img/iphone-screen-3-2@1x.png 1x,
-                /img/iphone-screen-3-2@2x.png 2x">
-                                    <img class="features__promo_img--additional" src="/img/iphone-screen-3-2@1x.png" alt="Приложение">
+                                <source media="(min-width: 1200px)" srcset="img/iphone-screen-3-2@1x.png 1x,
+                img/iphone-screen-3-2@2x.png 2x">
+                                    <img class="features__promo_img--additional" src="img/iphone-screen-3-2@1x.png" alt="Приложение">
                             </picture>
                             <picture>
-                                <source media="(min-width: 1200px)" srcset="/img/iphone-screen-3-3@1x.png 1x,
-                /img/iphone-screen-3-3@2x.png 2x">
-                                    <source media="(min-width: 700px)" srcset="/img/iphone-screen-2-3@1x.png 1x,
-                /img/iphone-screen-2-3@2x.png 2x">
-                                        <img class="features__promo_img" src="/img/iphone-screen-3-3@1x.png" alt="Приложение">
+                                <source media="(min-width: 1200px)" srcset="img/iphone-screen-3-3@1x.png 1x,
+                img/iphone-screen-3-3@2x.png 2x">
+                                    <source media="(min-width: 700px)" srcset="img/iphone-screen-2-3@1x.png 1x,
+                img/iphone-screen-2-3@2x.png 2x">
+                                        <img class="features__promo_img" src="img/iphone-screen-3-3@1x.png" alt="Приложение">
                             </picture>
                         </div>
                     </div>
@@ -219,9 +219,9 @@
                     <div class="contact__addr">Санкт-Петербург, Невский проспект, д.20</div>
                 </div>
                 <picture>
-                    <source media="(min-width: 1200px)" srcset="/img/map3.png 1x">
-                        <source media="(min-width: 700px)" srcset="/img/map2.png 1x">
-                            <img class="contacts__map" src="/img/map1.png" alt="Карта">
+                    <source media="(min-width: 1200px)" srcset="img/map3.png 1x">
+                        <source media="(min-width: 700px)" srcset="img/map2.png 1x">
+                            <img class="contacts__map" src="img/map1.png" alt="Карта">
                 </picture>
             </section>
         </div>
@@ -230,9 +230,9 @@
         <footer class="main_page_footer">
             <a href="#" class="main_page_footer__logo">
                 <picture>
-                    <source media="(min-width: 1200px)" srcset="/img/Pink-logo-footer-3@1x.png 1x, /img/Pink-logo-footer-3@2x.png 2x">
-                        <source media="(min-width: 700px)" srcset="/img/Pink-logo-footer-2@1x.png 1x, /img/Pink-logo-footer-2@2x.png 2x">
-                            <img src="/img/Pink-logo-footer-2@1x.png" alt="На главную">
+                    <source media="(min-width: 1200px)" srcset="img/Pink-logo-footer-3@1x.png 1x, img/Pink-logo-footer-3@2x.png 2x">
+                        <source media="(min-width: 700px)" srcset="img/Pink-logo-footer-2@1x.png 1x, img/Pink-logo-footer-2@2x.png 2x">
+                            <img src="img/Pink-logo-footer-2@1x.png" alt="На главную">
                 </picture>
             </a>
             <div class="main_page_footer__icons_block">
